app2/manifests/broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-broadcaster-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-broadcaster
  template:
    metadata:
      labels:
        app: app2-broadcaster
    spec:
      containers:
      - name: app2-broadcaster
        image: PROJECT/BROADCASTER
