app2/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-dep
  namespace: project
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: example-claim
      containers:
        - name: app2
          image: PROJECT/WEB
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
        - name: app2-api
          image: PROJECT/API
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 3541
