app2/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app2-dep
  namespace: project
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app2
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause:
          duration: 20s
      - setWeight: 50
      - pause:
          duration: 20s
      - analysis:
          templates:
          - templateName: cpu-usage
  template:
    metadata:
      labels:
        app: app2
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: example-claim
      containers:
        - name: app2
          image: findarkside/app2:3173e9c142920f945d841550
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
        - name: app2-api
          image: findarkside/app2-api:20bd04c321fe80af48ccb4c3
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 3541
