app2/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app2-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: app2-svc
          servicePort: 2345
      - path: /todos
        backend:
          serviceName: app2-svc
          servicePort: 2348
